# sgffp

./: .gitignore  Makefile  README.md  SNAPGENE_FORMAT_SPEC.md  flake.nix  history_analysis.py  main.py  pyproject.toml  snapgene.hexpat
.github/workflows/: test.yml
docs/: cli.md  format-spec.md  index.md  package.json
docs/.vitepress/: config.ts
docs/guide/: core-concepts.md  getting-started.md  history-operations.md  reading-writing.md
docs/reference/: extras.md  history.md  internals.md  other-models.md  sequence-features.md  sgff-object.md
src/sgffp/: __init__.py  cli.py  internal.py  parsers.py  reader.py  writer.py
src/sgffp/models/: __init__.py  alignment.py  attachment.py  base.py  feature.py  history.py  notes.py  ops.py  primer.py  properties.py  sequence.py  trace.py  trace_alignment.py
tests/: conftest.py  test_attachments.py  test_cli.py  test_compressed_dna_corpus.py  test_examples.py  test_integration.py  test_internal.py  test_models.py  test_ops.py  test_parsers.py  test_reader.py  test_roundtrip.py  test_writer.py
tests/data/: README.md  circularize_only.dna  gibson_assembly.dna  gibson_assembly.fasta  origin_spanning_features.dna  test.dna  test.prot  test.rna  test2.dna  test3.dna
tests/data/degenerate_examples/: 1.dna  2.dna  3.dna  4.dna  5.dna  a.dna  b.dna  c.dna  d.dna  e.dna  f.dna  g.dna  h.dna  i.dna
tests/data/format_31_examples/longB/: out.dna  out.json  vector.dna
tests/data/format_31_examples/longN/: out.dna  out.json  vector.dna
tests/data/format_31_examples/longW/: out.dna  out.json  vector.dna
tests/data/format_31_examples/lowercase/: out.dna  out.json  vector.dna
tests/data/format_31_examples/mixed/: insert.dna  out.dna  out.json  vector.dna
tests/data/format_31_examples/singleN-beginning/: out.dna  out.json  vector.dna
tests/data/format_31_examples/singleN-end/: out.dna  out.json  vector.dna
