[project]
name = "sgffp"
version = "0.5.16"
description = "SnapGene File Format Parser"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "html2text>=2025.4.15",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "xmltodict>=1.0.2",
]

[project.scripts]
sff = "sgffp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
