[project]
name = "sgffp"
version = "0.14.0"
description = "Read, write, and manipulate SnapGene files (.dna, .rna, .prot)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{ name = "Oleksii Stroganov", email = "merv1n@proton.me" }]
keywords = ["snapgene", "dna", "rna", "protein", "bioinformatics", "parser", "molecular-biology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: File Formats",
]
dependencies = [
    "xmltodict>=0.14",
]

[project.urls]
Homepage = "https://github.com/merv1n34k/sgffp"
Repository = "https://github.com/merv1n34k/sgffp"
Issues = "https://github.com/merv1n34k/sgffp/issues"

[project.scripts]
sff = "sgffp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "ruff>=0.15.1",
]
